welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color){
	while (!estSurBiscuit()) {
		if (isFacingTrail()) {
			baisseBrosse();leveBrosse();avance();
		}else{gauche()}
	}
baisseBrosse();prendBiscuit(); 
}

   
def isFacingTrail():Boolean = {
	var sol: Boolean = false
	if (!estFaceMur()) {
		avance()
		if(getCouleurSol() == Color.c)
		{recule(); sol = true}
		else{recule()}
	}
	return sol	
}


